--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- If you delete this meta tag World War Z will become a reality -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation 5</title>
+	<title>TCCT conf 2014</title>
 	<!-- If you are using the CSS version, only link these 2 files, you may add app.css to use for your overrides if you like -->
 	<link rel="stylesheet" href="static/src/foundation/css/normalize.css">
 	<link rel="stylesheet" href="static/src/foundation/css/foundation.css">
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+	<div class="loader"></div>
 	<header>
 		<div class="fixed contain-to-grid">
 			<nav class="top-bar" data-topbar role="navigation">
