--- a/schedule.html
+++ b/schedule.html
@@ -6,86 +6,297 @@
 	<meta charset="utf-8">
 	<!-- If you delete this meta tag World War Z will become a reality -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation 5</title>
+	<title>TCCT conf 2014</title>
 	<!-- If you are using the CSS version, only link these 2 files, you may add app.css to use for your overrides if you like -->
 	<link rel="stylesheet" href="static/src/foundation/css/normalize.css">
 	<link rel="stylesheet" href="static/src/foundation/css/foundation.css">
-
-
-	<link rel="stylesheet/less" type="text/css" href="static/body.less" />
-	<link rel="stylesheet/less" type="text/css" href="static/schedule.less" />
-	<script src="js/vendor/modernizr.js"></script>
+	<link rel="stylesheet" href="static/src/foundation/foundation-icons/foundation-icons.css">
+	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/body.less" />
+	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/hexagon.less" />
+	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/news.less" />
+	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/group.less" />
+	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/intro.less" />
+	<script src="static/src/foundation/js/vendor/modernizr.js"></script>
 </head>
 
 <body>
 	<header>
-		<nav class="top-bar" data-topbar role="navigation">
-			<ul class="title-area">
-				<li class="name">
-					<h1><a href="#">My Site</a></h1>
-				</li>
-				<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-				<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
-				</li>
-			</ul>
-
-			<section class="top-bar-section">
-				<!-- Right Nav Section -->
-				<ul class="right">
-					<li class="active"><a href="#">Right Button Active</a>
+		<div class="fixed contain-to-grid">
+			<nav class="top-bar" data-topbar role="navigation">
+				<ul class="title-area">
+					<li class="name">
+						<h1><a href="#index">TCCT conf</a></h1>
 					</li>
-					<li class="has-dropdown">
-						<a href="#">Right Button Dropdown</a>
-						<ul class="dropdown">
-							<li><a href="#">First link in dropdown</a>
-							</li>
-							<li class="active"><a href="#">Active link in dropdown</a>
-							</li>
-						</ul>
+					<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+					<li class="toggle-topbar menu-icon"><a href="#"><span></span></a>
 					</li>
 				</ul>
 
-				<!-- Left Nav Section -->
-				<ul class="left">
-					<li><a href="#">Left Nav Button</a>
-					</li>
-				</ul>
-			</section>
-		</nav>
+				<section class="top-bar-section">
+					<!-- Right Nav Section -->
+					<ul class="right">
+						<li>
+							<a href="#">徵求議程</a>
+						</li>
+						<li>
+							<a href="#">徵求工人</a>
+						</li>
+					</ul>
+					<ul class="left">
+						<li>
+							<a href="#news">最新消息</a>
+						</li>
+						<li>
+							<a href="#introduction">活動介紹</a>
+						</li>
+						<li>
+							<a href="#group">團隊介紹</a>
+						</li>
+						<li>
+							<a href="#sponsor">贊助單位</a>
+						</li>
+
+					</ul>
+				</section>
+			</nav>
+		</div>
 	</header>
-	<section id="schedule">
-		<div class="row page sche">
-			<table class="schedule-table">
-				<caption>Most Expensive Sandwiches by City</caption>
-				<tr>
-					<th scope="column">Rank</th>
-					<th scope="column">City</th>
-					<th scope="column">Price</th>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-				</tr>
-				<tr>
-					<td scope="row">Campbell, CA</td>
-					<td scope="row">New York, NY</td>
-					<td scope="row">Sandwich, IL</td>
-				</tr>
-				<tr>
-					<td>$12.99</td>
-					<td>$9.99</td>
-					<td>$8.99</td>
-				</tr>
-			</table>
+	<section id="index">
+		<div class="row page">
+			<div class="hex-group">
+				<div class="small-4 small-offset-2 columns">
+					<div class="hex">
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+						<div class="main">
+							fewf</div>
+					</div>
+				</div>
+				<div class="small-4 end columns">
+					<div class="hex">
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+						<div class="main">
+							<i class="fi-torsos"></i>
+						</div>
+					</div>
+				</div>
+				<div class="small-4 columns">
+					<div class="hex">
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+					</div>
+				</div>
+				<div class="small-4 columns">
+					<div class="hex">
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+						<div class="main center">few</div>
+					</div>
+				</div>
+				<div class="small-4 columns">
+					<div class="hex">
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+					</div>
+				</div>
+				<div class="small-4 small-offset-2 columns">
+					<div class="hex">
+						<div class="main">
+							fewfef
+						</div>
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+					</div>
+				</div>
+				<div class="small-4 end columns">
+					<div class="hex">
+						<div class="main">
+							fewfef
+						</div>
+						<div class="hex-1">
+						</div>
+						<div class="hex-2">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
+
+	<section id="news">
+		<div class="row page">
+			<h2>最新消息</h2>
+			<div class="row news-group panel">
+				<div class="small-4 columns">
+					<div class="circle">
+						<div>Nov. 16</div>
+					</div>
+				</div>
+				<div class="small-8 columns">
+					<div class="news-title">公開招募贊助商</div>
+					<div class="news-text"></div>
+				</div>
+			</div>
+			<div class="row news-group panel">
+				<div class="small-4 columns">
+					<div class="circle">
+						<div>Nov. 16</div>
+					</div>
+				</div>
+				<div class="small-8 columns">
+					<div class="news-title">開放投稿</div>
+					<div class="news-text">歡迎各校學生投稿，詳細資訊可至投稿區了解。</div>
+				</div>
+			</div>
+			<div class="row news-group panel">
+				<div class="small-4 columns">
+					<div class="circle">
+						<div>Oct. 25</div>
+					</div>
+				</div>
+				<div class="small-8 columns">
+					<div class="news-title">TCCT conf 籌備開始</div>
+					<div class="news-text"></div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<section id="introduction">
+		<div class="mask"></div>
+		<div class="row intro">
+			<div class="title">
+				<h2 class="text-center">TCCT conf - 清交電腦技術討論會</h2>
+				<h4 class="text-justify">
+						被稱為科技重鎮的新竹，並有清交兩所名校座落於此，應該要有自己的conference。
+透過分析開發框架，以及分享實戰經驗，啟發清交學生對程式的熱忱。
+發展社群，增進技術的分享，進一步與世界接軌。
+</h4>
+				<h4 class="text-justify">
+We should have our own conference in Hsinchu, a city famous for hi-tech industry and two prestigious universities, NCTU and NTHU. 
+Inspire the students' passion for information technologies,
+by analyzing the framework of development and sharing practical experience.
+Develop the community, promote technology sharing and link with the world.
+					
+				</h4>
+			</div>
+
+		</div>
+
+
+	</section>
+	<section id="group">
+		<div class="row page">
+			<h2>團隊介紹</h2>
+			<div class="row">
+
+				<div class="row">
+					<div class="small-12 medium-6 columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular"></div>
+							</div>
+							<div class="small-8 columns">總召：青蛙</div>
+						</div>
+					</div>
+					<div class="small-12 medium-6 columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div style="background: url(http://i.imgur.com/WdnoGgB.png?1);  background-repeat: no-repeat; background-size: cover;" class="circular"></div>
+							</div>
+							<div class="small-8 columns">場務組長：魚丸
+								<br>一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+						</div>
+					</div>
+					<div class="small-12 medium-6 columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular" style="background: url(http://ppt.cc/ccAE@.jpg);  background-repeat: no-repeat; background-size: cover;"></div>
+							</div>
+							<div class="small-8 columns">Bekk清大資工大一。自從高一拿到一台爛手機之後，就跳進研究Android系統的無底坑。堅信人品與Log裡的錯誤訊息數量有絕對關係</div>
+						</div>
+					</div>
+					<div class="small-12 medium-6 columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular"></div>
+							</div>
+							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+						</div>
+					</div>
+					<div class="small-12 medium-6 columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular"></div>
+							</div>
+							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+						</div>
+					</div>
+					<div class="small-12 medium-6 end columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular"></div>
+							</div>
+							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="sponsor">
+		<div class="row page">
+			<h2>贊助商</h2>
+			<div class="row">
+
+				<div class="row">
+					<div class="small-12 medium-3 columns panel">
+						<div class="circular"></div>
+					</div>
+					<div class="small-12 medium-3 columns panel">
+						<div class="circular"></div>
+					</div>
+					<div class="small-12 medium-3 columns panel">
+						<div class="circular"></div>
+					</div>
+					<div class="small-12 medium-3 end columns panel">
+						<div class="circular"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>
+	<footer>
+		<div class="row">
+			<div class="small-4 columns"><i class="fi-mail"></i> tcctconf@gmail.com</div>
+			<div class="small-4 columns"><i class="fi-home"></i> 國立清華大學台達館</div>
+			<div class="small-4 columns">Design by: TCCTconf籌備小組</div>
+		</div>
+
+	</footer>
 	<script src="static/src/foundation/js/vendor/jquery.js"></script>
 	<script src="static/src/foundation/js/foundation.min.js"></script>
+	<script src="static/src/foundation/js/foundation/foundation.topbar.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.3.0/less-1.3.0.min.js"></script>
 	<script>
 		$(document).foundation();
 	</script>
+	<script src="static/src/main/js/animation.js"></script>
 </body>
 
 </html>
