--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body>
-	<div class="loader"></div>
 	<header>
 		<div class="fixed contain-to-grid">
 			<nav class="top-bar" data-topbar role="navigation">
@@ -37,10 +36,10 @@
 					<!-- Right Nav Section -->
 					<ul class="right">
 						<li>
-							<a href="#">徵求議程</a>
+							<a href="./schedule.html">徵求議程</a>
 						</li>
 						<li>
-							<a href="#">徵求工人</a>
+							<a href="./schedule.html">徵求工人</a>
 						</li>
 					</ul>
 					<ul class="left">
@@ -100,7 +99,7 @@
 						</div>
 						<div class="hex-2">
 						</div>
-						<div class="main center">few</div>
+						<div class="main"><img id="fourth" src="src/pic/LOGO.png"></div>
 					</div>
 				</div>
 				<div class="small-4 columns">
@@ -233,17 +232,21 @@ Develop the community, promote technology sharing and link with the world.
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular"></div>
+								<div class="circular" style="background: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t34.0-12/10811652_1505422263044502_1832414034_n.jpg?oh=9b3847e7be62206b30745d497a6bce63&oe=546954E2&__gda__=1416198294_08b2a579a8c97adae8372ad5cad86de5);  background-repeat: no-repeat; background-size: cover;"></div>
 							</div>
-							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+							<div class="small-8 columns">個性活潑外向，喜歡打球和跳舞，但只要坐在電腦面前，一敲起鍵盤滑鼠，就像變了個人似的冷靜專注。平時喜歡閱讀科普和資訊新知，擅長c++和演算法，用縝密的思考及更有效率的方法解決問題。
+近期努力學習資訊安全和swift的OS app開發，希望能夠變成更全方位的資訊人。
+</div>
+							
+							
 						</div>
 					</div>
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular"></div>
+								<div class="circular" style="background: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t34.0-12/10814139_860212770669021_1354999429_n.jpg?oh=5b8ad654aa4da4c9d51795b13dc9808a&oe=54696079&__gda__=1416207129_78b89a4d69f848e86e85a3fbadee7dc7);  background-repeat: no-repeat; background-size: cover;"></div>
 							</div>
-							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+							<div class="small-8 columns">清大電資院學士班17級。大一上時上程設第一次接觸到code，就跳進坑裡了。打算終生把coding當作興趣。目前想走仿神經電路領域，資工領域的東西就當作休閒吧XD</div>
 						</div>
 					</div>
 					<div class="small-12 medium-6 end columns panel">
