--- a/schedule.html
+++ b/schedule.html
@@ -8,15 +8,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TCCT conf 2014</title>
 	<!-- If you are using the CSS version, only link these 2 files, you may add app.css to use for your overrides if you like -->
-	<link rel="stylesheet" href="static/src/foundation/css/normalize.css">
-	<link rel="stylesheet" href="static/src/foundation/css/foundation.css">
-	<link rel="stylesheet" href="static/src/foundation/foundation-icons/foundation-icons.css">
-	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/body.less" />
-	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/hexagon.less" />
-	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/news.less" />
-	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/group.less" />
-	<link rel="stylesheet/less" type="text/css" href="static/src/main/less/intro.less" />
-	<script src="static/src/foundation/js/vendor/modernizr.js"></script>
+	<link rel="stylesheet" href="src/foundation/css/normalize.css">
+	<link rel="stylesheet" href="src/foundation/css/foundation.css">
+	<link rel="stylesheet" href="src/foundation/foundation-icons/foundation-icons.css">
+	<link rel="stylesheet/less" type="text/css" href="src/main/less/body.less" />
+	<link rel="stylesheet/less" type="text/css" href="src/main/less/hexagon.less" />
+	<link rel="stylesheet/less" type="text/css" href="src/main/less/news.less" />
+	<link rel="stylesheet/less" type="text/css" href="src/main/less/group.less" />
+	<link rel="stylesheet/less" type="text/css" href="src/main/less/intro.less" />
+	<script src="src/foundation/js/vendor/modernizr.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 			<nav class="top-bar" data-topbar role="navigation">
 				<ul class="title-area">
 					<li class="name">
-						<h1><a href="#index">TCCT conf</a></h1>
+						<h1><a href="./index.html">TCCT conf</a></h1>
 					</li>
 					<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
 					<li class="toggle-topbar menu-icon"><a href="#"><span></span></a>
@@ -44,16 +44,16 @@
 					</ul>
 					<ul class="left">
 						<li>
-							<a href="#news">最新消息</a>
+							<a href="./index.html">最新消息</a>
 						</li>
 						<li>
-							<a href="#introduction">活動介紹</a>
+							<a href="./index.html">活動介紹</a>
 						</li>
 						<li>
-							<a href="#group">團隊介紹</a>
+							<a href="./index.html">團隊介紹</a>
 						</li>
 						<li>
-							<a href="#sponsor">贊助單位</a>
+							<a href="./index.html">贊助單位</a>
 						</li>
 
 					</ul>
