--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 						</div>
 						<div class="hex-2">
 						</div>
-						<div class="main"><img id="fourth" src="src/pic/LOGO.png"></div>
+						<div class="main">
+							<img id="fourth" src="src/pic/LOGO.png">
+						</div>
 					</div>
 				</div>
 				<div class="small-4 columns">
@@ -207,15 +209,16 @@ Develop the community, promote technology sharing and link with the world.
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular"></div>
+								<div class="circular" id="frog"></div>
 							</div>
-							<div class="small-8 columns">總召：青蛙</div>
+							<div class="small-8 columns">總召：青蛙
+								<br>清大工工系雙主修資工系，從國中以來就很喜歡寫程式，希望未來也可以往這方面發展。</div>
 						</div>
 					</div>
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div style="background: url(http://i.imgur.com/WdnoGgB.png?1);  background-repeat: no-repeat; background-size: cover;" class="circular"></div>
+								<div class="circular" id="fishball"></div>
 							</div>
 							<div class="small-8 columns">場務組長：魚丸
 								<br>一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
@@ -224,27 +227,26 @@ Develop the community, promote technology sharing and link with the world.
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular" style="background: url(http://ppt.cc/ccAE@.jpg);  background-repeat: no-repeat; background-size: cover;"></div>
+								<div class="circular" id="bekket"></div>
 							</div>
-							<div class="small-8 columns">Bekk清大資工大一。自從高一拿到一台爛手機之後，就跳進研究Android系統的無底坑。堅信人品與Log裡的錯誤訊息數量有絕對關係</div>
+							<div class="small-8 columns">民2<br>清大資工大一。自從高一拿到一台爛手機之後，就跳進研究Android系統的無底坑。堅信人品與Log裡的錯誤訊息數量有絕對關係</div>
 						</div>
 					</div>
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular" style="background: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t34.0-12/10811652_1505422263044502_1832414034_n.jpg?oh=9b3847e7be62206b30745d497a6bce63&oe=546954E2&__gda__=1416198294_08b2a579a8c97adae8372ad5cad86de5);  background-repeat: no-repeat; background-size: cover;"></div>
+								<div class="circular" id="ray"></div>
 							</div>
-							<div class="small-8 columns">個性活潑外向，喜歡打球和跳舞，但只要坐在電腦面前，一敲起鍵盤滑鼠，就像變了個人似的冷靜專注。平時喜歡閱讀科普和資訊新知，擅長c++和演算法，用縝密的思考及更有效率的方法解決問題。
-近期努力學習資訊安全和swift的OS app開發，希望能夠變成更全方位的資訊人。
-</div>
-							
-							
+							<div class="small-8 columns">睿睿<br>個性活潑外向，喜歡打球和跳舞，但只要坐在電腦面前，一敲起鍵盤滑鼠，就像變了個人似的冷靜專注。近期努力學習資訊安全和swift的OS app開發，希望能夠變成更全方位的資訊人。
+							</div>
+
+
 						</div>
 					</div>
 					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular" style="background: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t34.0-12/10814139_860212770669021_1354999429_n.jpg?oh=5b8ad654aa4da4c9d51795b13dc9808a&oe=54696079&__gda__=1416207129_78b89a4d69f848e86e85a3fbadee7dc7);  background-repeat: no-repeat; background-size: cover;"></div>
+								<div class="circular" id="ham"></div>
 							</div>
 							<div class="small-8 columns">清大電資院學士班17級。大一上時上程設第一次接觸到code，就跳進坑裡了。打算終生把coding當作興趣。目前想走仿神經電路領域，資工領域的東西就當作休閒吧XD</div>
 						</div>
@@ -252,12 +254,19 @@ Develop the community, promote technology sharing and link with the world.
 					<div class="small-12 medium-6 end columns panel">
 						<div class="row">
 							<div class="small-4 columns">
-								<div class="circular"></div>
+								<div class="circular" id="majer"></div>
 							</div>
-							<div class="small-8 columns">fishball , 魚丸 一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+							<div class="small-8 columns">美宣組長：海蜇皮<br>交大電機大二，喜歡動手實作，相信未來是軟硬體整合的時代，開發過Kinect體感遊戲，對於電腦科技與設計美感兩者一直有整合的夢想。</div>
 						</div>
 					</div>
-
+					<div class="small-12 medium-6 end columns panel">
+						<div class="row">
+							<div class="small-4 columns">
+								<div class="circular" id="joshua"></div>
+							</div>
+							<div class="small-8 columns">公關組長：炸蝦子，交大電資班大一。喜歡Linux、Ruby on Rails，最近正在想要認真把C++學起來，不過念了交作業大學之後就沒什麼時間跟精力...。想研究的方向Linux系統程式設計，還有Web後端平台。</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
