--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 	<header>
-		<div class="fixed contain-to-grid">
+		<div class="contain-to-grid fixed">
 			<nav class="top-bar" data-topbar role="navigation">
 				<ul class="title-area">
 					<li class="name">
