--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Develop the community, promote technology sharing and link with the world.
 							<div class="small-8 columns">清大電資院學士班17級。大一上時上程設第一次接觸到code，就跳進坑裡了。打算終生把coding當作興趣。目前想走仿神經電路領域，資工領域的東西就當作休閒吧XD</div>
 						</div>
 					</div>
-					<div class="small-12 medium-6 end columns panel">
+					<div class="small-12 medium-6 columns panel">
 						<div class="row">
 							<div class="small-4 columns">
 								<div class="circular" id="majer"></div>
@@ -296,9 +296,9 @@ Develop the community, promote technology sharing and link with the world.
 	</section>
 	<footer>
 		<div class="row">
-			<div class="small-4 columns"><i class="fi-mail"></i> tcctconf@gmail.com</div>
-			<div class="small-4 columns"><i class="fi-home"></i> 國立清華大學台達館</div>
-			<div class="small-4 columns">Design by: TCCTconf籌備小組</div>
+			<div class="small-12 large-4 columns text-center"><i class="fi-mail"></i> tcctconf@gmail.com</div>
+			<div class="small-12 large-4 columns text-center"><i class="fi-home"></i> 國立清華大學台達館</div>
+			<div class="small-12 large-4 columns text-center">Design by: TCCTconf籌備小組</div>
 		</div>
 
 	</footer>
