--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 						<div class="hex-2">
 						</div>
 						<div class="main">
-							fewf</div>
+							<h1 id="first">ORIGIN</h1>
+						</div>
 					</div>
 				</div>
 				<div class="small-4 end columns">
@@ -81,7 +82,9 @@
 						<div class="hex-2">
 						</div>
 						<div class="main">
-							<i class="fi-torsos"></i>
+							<a href="#news">
+								<img id="second" src="src/pic/news.png">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -90,6 +93,11 @@
 						<div class="hex-1">
 						</div>
 						<div class="hex-2">
+						</div>
+						<div class="main">
+							<a href="schedule.html">
+								<img id="third" src="src/pic/schedule.png">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -110,16 +118,22 @@
 						</div>
 						<div class="hex-2">
 						</div>
+						<div class="main">
+							<h1>2015.03.14</h1>
+							<h2>@清大台達館</h2>
+						</div>
 					</div>
 				</div>
 				<div class="small-4 small-offset-2 columns">
 					<div class="hex">
-						<div class="main">
-							fewfef
-						</div>
 						<div class="hex-1">
 						</div>
 						<div class="hex-2">
+						</div>
+						<div class="main">
+							<a href="#group">
+								<img id="sixth" src="src/pic/group.png">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -204,68 +218,68 @@ Develop the community, promote technology sharing and link with the world.
 		<div class="row page">
 			<h2>團隊介紹</h2>
 			<div class="row">
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="frog"></div>
+						</div>
+						<div class="small-8 columns">總召：青蛙
+							<br>清大工工系雙主修資工系，從國中以來就很喜歡寫程式，希望未來也可以往這方面發展。</div>
+					</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="fishball"></div>
+						</div>
+						<div class="small-8 columns">場務組長：魚丸
+							<br>一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
+					</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="bekket"></div>
+						</div>
+						<div class="small-8 columns">民2
+							<br>清大資工大一。自從高一拿到一台爛手機之後，就跳進研究Android系統的無底坑。堅信人品與Log裡的錯誤訊息數量有絕對關係</div>
+					</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="ray"></div>
+						</div>
+						<div class="small-8 columns">睿睿
+							<br>個性活潑外向，喜歡打球和跳舞，但只要坐在電腦面前，一敲起鍵盤滑鼠，就像變了個人似的冷靜專注。近期努力學習資訊安全和swift的OS app開發，希望能夠變成更全方位的資訊人。
+						</div>
 
-				<div class="row">
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="frog"></div>
-							</div>
-							<div class="small-8 columns">總召：青蛙
-								<br>清大工工系雙主修資工系，從國中以來就很喜歡寫程式，希望未來也可以往這方面發展。</div>
-						</div>
-					</div>
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="fishball"></div>
-							</div>
-							<div class="small-8 columns">場務組長：魚丸
-								<br>一個很喜歡到各種conf當工人的人 就讀交作業大學資工系一年級 目前是打算走競賽路線 不過如果有機會希望能學學網頁&APP開發囉~ 歡迎拍打餵食(?)</div>
-						</div>
-					</div>
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="bekket"></div>
-							</div>
-							<div class="small-8 columns">民2<br>清大資工大一。自從高一拿到一台爛手機之後，就跳進研究Android系統的無底坑。堅信人品與Log裡的錯誤訊息數量有絕對關係</div>
-						</div>
-					</div>
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="ray"></div>
-							</div>
-							<div class="small-8 columns">睿睿<br>個性活潑外向，喜歡打球和跳舞，但只要坐在電腦面前，一敲起鍵盤滑鼠，就像變了個人似的冷靜專注。近期努力學習資訊安全和swift的OS app開發，希望能夠變成更全方位的資訊人。
-							</div>
 
-
-						</div>
 					</div>
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="ham"></div>
-							</div>
-							<div class="small-8 columns">清大電資院學士班17級。大一上時上程設第一次接觸到code，就跳進坑裡了。打算終生把coding當作興趣。目前想走仿神經電路領域，資工領域的東西就當作休閒吧XD</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="ham"></div>
 						</div>
+						<div class="small-8 columns">清大電資院學士班17級。大一上時上程設第一次接觸到code，就跳進坑裡了。打算終生把coding當作興趣。目前想走仿神經電路領域，資工領域的東西就當作休閒吧XD</div>
 					</div>
-					<div class="small-12 medium-6 columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="majer"></div>
-							</div>
-							<div class="small-8 columns">美宣組長：海蜇皮<br>交大電機大二，喜歡動手實作，相信未來是軟硬體整合的時代，開發過Kinect體感遊戲，對於電腦科技與設計美感兩者一直有整合的夢想。</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="majer"></div>
 						</div>
+						<div class="small-8 columns">美宣組長：海蜇皮
+							<br>交大電機大二，喜歡動手實作，相信未來是軟硬體整合的時代，開發過Kinect體感遊戲，對於電腦科技與設計美感兩者一直有整合的夢想。</div>
 					</div>
-					<div class="small-12 medium-6 end columns panel">
-						<div class="row">
-							<div class="small-4 columns">
-								<div class="circular" id="joshua"></div>
-							</div>
-							<div class="small-8 columns">公關組長：炸蝦子，交大電資班大一。喜歡Linux、Ruby on Rails，最近正在想要認真把C++學起來，不過念了交作業大學之後就沒什麼時間跟精力...。想研究的方向Linux系統程式設計，還有Web後端平台。</div>
+				</div>
+				<div class="small-12 medium-6 end columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="joshua"></div>
 						</div>
+						<div class="small-8 columns">公關組長：炸蝦子，交大電資班大一。喜歡Linux、Ruby on Rails，最近正在想要認真把C++學起來，不過念了交作業大學之後就沒什麼時間跟精力...。想研究的方向Linux系統程式設計，還有Web後端平台。</div>
 					</div>
 				</div>
 			</div>
@@ -275,20 +289,17 @@ Develop the community, promote technology sharing and link with the world.
 		<div class="row page">
 			<h2>贊助商</h2>
 			<div class="row">
-
-				<div class="row">
-					<div class="small-12 medium-3 columns panel">
-						<div class="circular"></div>
-					</div>
-					<div class="small-12 medium-3 columns panel">
-						<div class="circular"></div>
-					</div>
-					<div class="small-12 medium-3 columns panel">
-						<div class="circular"></div>
-					</div>
-					<div class="small-12 medium-3 end columns panel">
-						<div class="circular"></div>
-					</div>
+				<div class="small-6 medium-3 columns panel">
+					<div class="circular"></div>
+				</div>
+				<div class="small-6 medium-3 columns panel">
+					<div class="circular"></div>
+				</div>
+				<div class="small-6 medium-3 columns panel">
+					<div class="circular"></div>
+				</div>
+				<div class="small-6 medium-3 end columns panel">
+					<div class="circular"></div>
 				</div>
 			</div>
 		</div>
