--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="src/foundation/css/normalize.css">
 	<link rel="stylesheet" href="src/foundation/css/foundation.css">
 	<link rel="stylesheet" href="src/foundation/foundation-icons/foundation-icons.css">
+	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/body.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/hexagon.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/news.less" />
@@ -71,7 +72,7 @@
 						<div class="hex-2">
 						</div>
 						<div class="main">
-							<h1 id="first">ORIGIN</h1>
+							<span id="first">Origin</span>
 						</div>
 					</div>
 				</div>
@@ -119,8 +120,7 @@
 						<div class="hex-2">
 						</div>
 						<div class="main">
-							<h1>2015.03.14</h1>
-							<h2>@清大台達館</h2>
+							<span id="fifth">2015.03.14 <br> @清大台達館</span>
 						</div>
 					</div>
 				</div>
@@ -140,7 +140,7 @@
 				<div class="small-4 end columns">
 					<div class="hex">
 						<div class="main">
-							fewfef
+							<span id="seventh">Sponser</span>
 						</div>
 						<div class="hex-1">
 						</div>
@@ -158,7 +158,7 @@
 			<div class="row news-group panel">
 				<div class="small-4 columns">
 					<div class="circle">
-						<div>Nov. 16</div>
+						<div>Nov. 17</div>
 					</div>
 				</div>
 				<div class="small-8 columns">
@@ -169,7 +169,7 @@
 			<div class="row news-group panel">
 				<div class="small-4 columns">
 					<div class="circle">
-						<div>Nov. 16</div>
+						<div>Nov. 17</div>
 					</div>
 				</div>
 				<div class="small-8 columns">
@@ -288,6 +288,7 @@ Develop the community, promote technology sharing and link with the world.
 	<section id="sponsor">
 		<div class="row page">
 			<h2>贊助商</h2>
+			<!--
 			<div class="row">
 				<div class="small-6 medium-3 columns panel">
 					<div class="circular"></div>
@@ -302,6 +303,7 @@ Develop the community, promote technology sharing and link with the world.
 					<div class="circular"></div>
 				</div>
 			</div>
+			-->
 		</div>
 
 	</section>
