--- a/index.html
+++ b/index.html
@@ -66,41 +66,45 @@
 		<div class="row page">
 			<div class="hex-group">
 				<div class="small-4 small-offset-2 columns">
-					<div class="hex">
-						<div class="hex-1">
+					<a href="#introduction">
+						<div class="hex">
+							<div class="hex-1">
+							</div>
+							<div class="hex-2">
+							</div>
+							<div class="main">
+								<span id="first">Origin</span>
+							</div>
 						</div>
-						<div class="hex-2">
-						</div>
-						<div class="main">
-							<span id="first">Origin</span>
-						</div>
-					</div>
+					</a>
 				</div>
 				<div class="small-4 end columns">
-					<div class="hex">
-						<div class="hex-1">
-						</div>
-						<div class="hex-2">
-						</div>
-						<div class="main">
-							<a href="#news">
+					<a href="#news">
+						<div class="hex">
+							<div class="hex-1">
+							</div>
+							<div class="hex-2">
+							</div>
+							<div class="main">
+
 								<img id="second" src="src/pic/news.png">
-							</a>
+
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="small-4 columns">
-					<div class="hex">
-						<div class="hex-1">
-						</div>
-						<div class="hex-2">
-						</div>
-						<div class="main">
-							<a href="schedule.html">
+					<a href="schedule.html">
+						<div class="hex">
+							<div class="hex-1">
+							</div>
+							<div class="hex-2">
+							</div>
+							<div class="main">
 								<img id="third" src="src/pic/schedule.png">
-							</a>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="small-4 columns">
 					<div class="hex">
@@ -125,28 +129,32 @@
 					</div>
 				</div>
 				<div class="small-4 small-offset-2 columns">
-					<div class="hex">
-						<div class="hex-1">
-						</div>
-						<div class="hex-2">
-						</div>
-						<div class="main">
-							<a href="#group">
+					<a href="#group">
+						<div class="hex">
+							<div class="hex-1">
+							</div>
+							<div class="hex-2">
+							</div>
+							<div class="main">
+
 								<img id="sixth" src="src/pic/group.png">
-							</a>
+
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="small-4 end columns">
-					<div class="hex">
-						<div class="main">
-							<span id="seventh">Sponser</span>
+					<a href="#sponsor">
+						<div class="hex">
+							<div class="main">
+								<span id="seventh">Sponser</span>
+							</div>
+							<div class="hex-1">
+							</div>
+							<div class="hex-2">
+							</div>
 						</div>
-						<div class="hex-1">
-						</div>
-						<div class="hex-2">
-						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
