--- a/schedule.html
+++ b/schedule.html
@@ -66,8 +66,8 @@
 				<h1>我們需要你的協助</h1>
 				<h3>看看能做些什麼</h3><br><br>
 				<div class="row">
-					<div class="small-3 small-offset-3 columns"><a href="#article" class="button round large">我要投稿</a></div>
-					<div class="small-3 end columns"><a href="#" class="button round large">成為工人</a></div>
+					<div class="small-6 large-3 large-offset-3 columns"><a href="#article" class="button round small">我要投稿</a></div>
+					<div class="small-6 large-3 end columns"><a href="#" class="button round small">成為工人</a></div>
 				</div>
 			</div>
 			
