--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,9 @@
 	</header>
 	<section id="index2">
 		<div class="row page help">
-			<div class="small-12 text-center columns"><br><br><br><br><br><br>
+			<div class="small-12 text-center columns">
+				<img src="src/pic/LOGO.png">
+				<br><br>
 				<h1>2015 TCCTconf</h1>
 				<h1>我們需要你的協助</h1>
 				<h3>看看能做些什麼</h3><br><br>
