--- a/schedule.html
+++ b/schedule.html
@@ -32,14 +32,7 @@
 
 				<section class="top-bar-section">
 					<!-- Right Nav Section -->
-					<ul class="right">
-						<li>
-							<a href="#article">徵求議程</a>
-						</li>
-						<li>
-							<a href="#">徵求工人</a>
-						</li>
-					</ul>
+					
 					<ul class="left">
 						<li>
 							<a href="./index.html#news">最新消息</a>
@@ -55,6 +48,14 @@
 						</li>
 
 					</ul>
+					<ul class="right">
+						<li>
+							<a href="#article">徵求議程</a>
+						</li>
+						<li>
+							<a href="#worker">徵求工人</a>
+						</li>
+					</ul>
 				</section>
 			</nav>
 		</div>
@@ -63,18 +64,24 @@
 		<div class="row page help">
 			<div class="small-12 text-center columns">
 				<img src="src/pic/LOGO.png">
-				<br><br>
+				<br>
+				<br>
 				<h1>2015 TCCTconf</h1>
 				<h1>我們需要你的協助</h1>
-				<h3>看看能做些什麼</h3><br><br>
+				<h3>看看能做些什麼</h3>
+				<br>
+				<br>
 				<div class="row">
-					<div class="small-12 large-3 large-offset-3 columns"><a href="#article" class="button round large">我要投稿</a></div>
-					<div class="small-12 large-3 end columns"><a href="#" class="button round large">成為工人</a></div>
+					<div class="small-12 large-3 large-offset-1 columns"><a href="#article" class="button round large">我要投稿</a>
+					</div>
+					<div class="small-12 large-4 columns"><a href="#worker" class="button round large">成為工人</a>
+					</div>
+					<div class="small-12 large-3 end columns"><a href="#article2" class="button round large">微議程</a>
+					</div>
 				</div>
-			</div>
-			
-		</div>
 
+			</div>
+		</div>
 	</section>
 	<section id="article">
 		<div class="row page">
@@ -83,6 +90,7 @@
 				<h4>議程說明</h4>
 				<h5>講者將有50分鐘的時間</h5>
 				<h4>議程主題</h4>
+				<h4 style="font-weight:800">Be the top of the Web</h4>
 				<h5>
 					這次conf的主題著重在網頁技術的探討，下列為講題方向：
 				</h5>
@@ -100,7 +108,7 @@
 				<h6>必要資訊</h6>
 				<ul>
 					<li>姓名或暱稱</li>
-					<li>開源專案介紹</li>
+					<li>學校系級</li>
 					<li>50 字內簡介</li>
 					<li>主題</li>
 					<li>簡介</li>
@@ -118,11 +126,67 @@
 
 				<h4>(如您的講題被 TCCT conf 2015 採用，我們會贈送您 VIP 票一張)</h4>
 			</div>
-			
+
 		</div>
 
 	</section>
+	<section id="worker">
+		<div class="row page">
+			<div class="small-12 text-justify columns">
+				<h3>募集工人中~</h3>
+				<h4>為了讓TCCTconf辦的更好，我們活動當天需要一些人力幫助我們</h4>
+				<h4>以下我們所需的人力：</h4>
+				<ul>
+					<li><h5>餐飲組 2人</h5></li>
+					<li><h5>錄影組 1人</h5></li>
+					<li><h5>門神 2人</h5></li>
+				</ul>
+				<h4>如果有時間，也有興趣加入我們的，歡迎寄信到tcctconf@gmail.com</h4>
+				<h4>主旨為「TCCT conf 2015 工人應徵」，並附上簡單的自我介紹，以及自己想要加入的組別。</h4>
+				
+		
+			</div>
+		</div>
+	</section>
 
+	<section id="article2">
+		<div class="row page">
+			<div class="small-12 text-justify columns">
+				<h3>徵求微議程 (Call for Lightning Talks)</h3>
+				<h4>議程說明</h4>
+				<h5>我們將分兩階段徵稿，除了現在投稿外，當天現場也開放投稿，但是如果線上投稿錄取將贈送您 VIP 票一張</h5>
+				<h5>微議程與一般議程相同，但是講者只有5分鐘的時間(包含架設電腦的時間）</h5>
+				<h4>議程主題</h4>
+				<h5 style="font-weight:800">Be the top of the Web</h5>
+				<h5>微議程的主題較為寬鬆，任何有關網頁的技術我們都很歡迎，也歡迎開源專案徵才。</h5>
+				<h4>投稿方式</h4>
+				<h5>信件主旨為「TCCT conf 2015 微議程投稿」，並請附上下列資料：</h5>
+				<h6>必要資訊</h6>
+				<ul>
+					<li>姓名或暱稱</li>
+					<li>學校系級</li>
+					<li>50 字內簡介</li>
+					<li>主題</li>
+					<li>簡介</li>
+				</ul>
+				<h4>請來信至 tcctconf@gmail.com ，歡迎來與大家一起同樂。 </h4>
+
+				<h4>截稿日期為 12/20 (星期六)，並將會在 12/21 (星期日)公布錄取名單。 </h4>
+
+				<h4>(如您的講題被 TCCT conf 2015 採用，我們會贈送您 VIP 票一張)</h4>
+			</div>
+
+		</div>
+
+	</section>
+	<footer>
+		<div class="row">
+			<div class="small-12 large-4 columns text-center"><i class="fi-mail"></i> tcctconf@gmail.com</div>
+			<div class="small-12 large-4 columns text-center"><i class="fi-home"></i> 國立清華大學台達館</div>
+			<div class="small-12 large-4 columns text-center">Design by: TCCTconf籌備小組</div>
+		</div>
+
+	</footer>
 	<script src="src/foundation/js/vendor/jquery.js"></script>
 	<script src="src/foundation/js/foundation.min.js"></script>
 	<script src="src/foundation/js/foundation/foundation.topbar.js"></script>
