--- a/index.html
+++ b/index.html
@@ -282,6 +282,34 @@ Develop the community, promote technology sharing and link with the world.
 							<br>交大電機大二，喜歡動手實作，相信未來是軟硬體整合的時代，開發過Kinect體感遊戲，對於電腦科技與設計美感兩者一直有整合的夢想。</div>
 					</div>
 				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="tocknicsu"></div>
+						</div>
+						<div class="small-8 columns">小Ｔ
+							<br>交大資工大一。目前走競賽路線，並在閒暇之餘敲敲鍵盤研究網頁前後端的技巧，學習資訊安全以及app的開發。</div>
+					</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="yhchen"></div>
+						</div>
+						<div class="small-8 columns">蠑螈
+							<br>交大資工大一。目前走歡樂路線，常在閒暇之餘打打競賽、排球、健身。個性活潑外向、幽默風趣，希望未來可以成為一個身心健康、成熟穩重的人。</div>
+					</div>
+				</div>
+				<div class="small-12 medium-6 columns panel">
+					<div class="row">
+						<div class="small-4 columns">
+							<div class="circular" id="chhu"></div>
+						</div>
+						<div class="small-8 columns">瑄瑄
+							<br>
+交大資工大一，國中接觸到C語言之後便一腳踏入了資訊領域，之後有稍微學過Java、Html/css，未來計畫多學點網頁和App開發，也想學一些網路相關的東西，希望能過多元發展自己的資訊能力。</div>
+					</div>
+				</div>
 				<div class="small-12 medium-6 end columns panel">
 					<div class="row">
 						<div class="small-4 columns">
