--- a/schedule.html
+++ b/schedule.html
@@ -155,7 +155,7 @@
 				<h3>徵求微議程 (Call for Lightning Talks)</h3>
 				<h4>議程說明</h4>
 				<h5>我們將分兩階段徵稿，除了現在投稿外，當天現場也開放投稿，但是如果線上投稿錄取將贈送您 VIP 票一張</h5>
-				<h5>微議程與一般議程相同，但是講者只有5分鐘的時間(包含架設電腦的時間）</h5>
+				<h5>微議程與一般議程相同，但是講者只有5分鐘的時間</h5>
 				<h4>議程主題</h4>
 				<h5 style="font-weight:800">Be the top of the Web</h5>
 				<h5>微議程的主題較為寬鬆，任何有關網頁的技術我們都很歡迎，也歡迎開源專案徵才。</h5>
