--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="src/foundation/css/normalize.css">
 	<link rel="stylesheet" href="src/foundation/css/foundation.css">
 	<link rel="stylesheet" href="src/foundation/foundation-icons/foundation-icons.css">
-	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/body.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/hexagon.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/news.less" />
@@ -113,7 +113,7 @@
 						<div class="hex-2">
 						</div>
 						<div class="main">
-							<img id="fourth" src="src/pic/LOGO.png">
+							<img id="fourth" src="src/pic/LOGO-Black.png">
 						</div>
 					</div>
 				</div>
