--- a/schedule.html
+++ b/schedule.html
@@ -63,7 +63,7 @@
 	<section id="index2">
 		<div class="row page help">
 			<div class="small-12 text-center columns">
-				<img src="src/pic/LOGO.png">
+				<img src="src/pic/LOGO-White.png"/>
 				<br>
 				<br>
 				<h1>2015 TCCTconf</h1>
