--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="src/foundation/css/normalize.css">
 	<link rel="stylesheet" href="src/foundation/css/foundation.css">
 	<link rel="stylesheet" href="src/foundation/foundation-icons/foundation-icons.css">
-	<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/body.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/hexagon.less" />
 	<link rel="stylesheet/less" type="text/css" href="src/main/less/news.less" />
