--- a/schedule.html
+++ b/schedule.html
@@ -109,9 +109,9 @@
 				<ul>
 					<li>姓名或暱稱</li>
 					<li>學校系級</li>
-					<li>50 字內簡介</li>
 					<li>主題</li>
-					<li>簡介</li>
+					<li>議程內容說明</li>
+					<li>50 字內簡介</li>
 				</ul>
 				<h6>可附上資訊</h6>
 				<ul>
