--- a/schedule.html
+++ b/schedule.html
@@ -165,9 +165,9 @@
 				<ul>
 					<li>姓名或暱稱</li>
 					<li>學校系級</li>
-					<li>50 字內簡介</li>
 					<li>主題</li>
-					<li>簡介</li>
+					<li>議程內容說明</li>
+					<li>50 字內簡介</li>
 				</ul>
 				<h4>請來信至 tcctconf@gmail.com ，歡迎來與大家一起同樂。 </h4>
 
