--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </tr>
                     <tr>
                         <td>13:00~13:50</td>
-                        <td>休息</td>
+                        <td>敬請期待</td>
                     </tr>
                     <tr>
                         <td>13:50~14:00</td>
