--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </tr>
                     <tr>
                         <td>13:00~13:50</td>
-                        <td>敬請期待</td>
+                        <td>敬請期待    </td>
                     </tr>
                     <tr>
                         <td>13:50~14:00</td>
@@ -430,10 +430,24 @@ Develop the community, promote technology sharing and link with the world.
     </section>
     <section id="sponsor">
         <div class="row page">
+            
             <h2>贊助商</h2>
             <div class="row">
                 <div class="small-6 medium-3 columns panel">
                     <img src="src/pic/4point.png">
+                </div>
+                <div class="small-6 medium-3 columns panel end">
+                    <img src="src/pic/mozilla.jpg">
+                </div>
+                <div class="small-6 medium-3 columns panel end">
+                    <img src="src/pic/openfoundry.png">
+                </div>
+            </div>
+            
+            <h2>特別感謝</h2>
+            <div class="row">
+                <div class="small-6 medium-3 columns panel end">
+                    <img src="src/pic/openfoundry.png">
                 </div>
             </div>
         </div>
