--- a/index.html
+++ b/index.html
@@ -159,6 +159,17 @@
             <div class="row news-group panel">
                 <div class="small-4 columns">
                     <div class="circle">
+                        <div>Feb. 22</div>
+                    </div>
+                </div>
+                <div class="small-8 columns">
+                    <div class="news-title">已經可以報名了喔</div>
+                    <div class="news-text"><a href="http://www.accupass.com/event/register/1501231624301681820907">報名網址</a></div>
+                </div>
+            </div>
+            <div class="row news-group panel">
+                <div class="small-4 columns">
+                    <div class="circle">
                         <div>Jan. 07</div>
                     </div>
                 </div>
@@ -210,80 +221,99 @@
                     <tr>
                         <th>時間</th>
                         <th>活動內容</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>7:30~8:30</td>
                         <td>報到</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>8:30~8:50</td>
                         <td>致詞</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>8:50~10:10</td>
                         <td>Keynote</td>
+                        <td>ihower</td>
                     </tr>
                     <tr>
                         <td>10:10~10:20</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>10:20~11:10</td>
                         <td>Semantic UI - 語意化的世界</td>
+                        <td>hydai</td>
                     </tr>
                     <tr>
                         <td>11:10~11:15</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>11:15~12:05</td>
                         <td>Go to future - ECMAScript 6</td>
+                        <td>Oberon</td>
                     </tr>
                     <tr>
                         <td>12:05~13:00</td>
                         <td>中午</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>13:00~13:50</td>
-                        <td>敬請期待    </td>
+                        <td>Code refactoring with symfony2</td>
+                        <td>蘇展</td>
                     </tr>
                     <tr>
                         <td>13:50~14:00</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>14:00~14:50</td>
                         <td>讓你的資料活起來——淺談 D3.js</td>
+                        <td>DH</td>
                     </tr>
                     <tr>
                         <td>14:50~15:10</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>15:10~16:00</td>
                         <td>基於開源軟體的虛擬化雲端技術</td>
+                        <td>浪打</td>
                     </tr>
                     <tr>
                         <td>16:00~16:10</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>16:10~17:00</td>
                         <td>Dart - Structured Web Programming</td>
+                        <td>CJHwong</td>
                     </tr>
                     <tr>
                         <td>17:00~17:20</td>
                         <td>休息</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>17:20~18:30</td>
                         <td>Lightning Talk</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>18:30~19:00</td>
                         <td>解散</td>
+                        <td></td>
                     </tr>
 
                 </tbody>
