--- a/index.html
+++ b/index.html
@@ -476,6 +476,12 @@ Develop the community, promote technology sharing and link with the world.
                 <div class="small-6 medium-3 columns panel end">
                     <img src="src/pic/openfoundry.png">
                 </div>
+                <div class="small-6 medium-3 columns panel end">
+                    <img src="src/pic/logo_accupass_color.jpg">
+                </div>
+                <div class="small-6 medium-3 columns panel end text-center">
+                    <img src="src/pic/eecs.jpg" height="100" width="100">
+                </div>
             </div>
         </div>
 
