--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="hex-2">
                         </div>
                         <div class="main">
-                            <span id="fifth">2015.03.14 <br> @清大台達館</span>
+                            <span id="fifth">2015.03.14 <br> @清大資電館125</span>
                         </div>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                     </tr>
                     <tr>
                         <td>8:50~10:10</td>
-                        <td>Keynote</td>
+                        <td>Keynote: Some Lessons I Learned as a Web Developer</td>
                         <td>ihower</td>
                     </tr>
                     <tr>
